--- a/web/demo-page.html
+++ b/web/demo-page.html
@@ -395,7 +395,7 @@
                             <div class="metric-label">Accuracy</div>
                         </div>
                     </div>
-                    <a href="http://localhost:8080" class="btn btn-primary" style="width: 100%; text-align: center; margin-top: 20px;" target="_blank">Launch AskPhi</a>
+                    <a href="https://askphi-chatbot-829831815576.us-central1.run.app" class="btn btn-primary" style="width: 100%; text-align: center; margin-top: 20px;" target="_blank">Launch AskPhi</a>
                 </div>
 
                 <div class="demo-card">
@@ -460,8 +460,8 @@
 
                 <div class="status-card">
                     <h4>AskPhi Chatbot</h4>
-                    <div class="value">✅ READY</div>
-                    <p style="color: #a0aec0; margin-top: 10px; font-size: 0.9em;">PID 262775 | Port 8080</p>
+                    <div class="value">✅ DEPLOYED</div>
+                    <p style="color: #a0aec0; margin-top: 10px; font-size: 0.9em;">Cloud Run | Public HTTPS</p>
                 </div>
 
                 <div class="status-card">
@@ -507,7 +507,7 @@
         // Auto-refresh system status (optional)
         async function refreshStatus() {
             try {
-                const response = await fetch('http://localhost:8080/api/status');
+                const response = await fetch('https://askphi-chatbot-829831815576.us-central1.run.app/api/status');
                 const data = await response.json();
                 console.log('System Status:', data);
             } catch (error) {
